# Floof-Sim

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Floof  Floof.cpp  README.md  Todo.txt  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-4e1f606df8f60d94c09b.json  cmakeFiles-v1-9f95dcad4f22df746e16.json  codemodel-v2-799d90888e89f8ab13ae.json  directory-Libs.entt-b8f0e3ea1064584808d2.json  directory-Libs.glfw-d9d049b84d4561825161.json  directory-Libs.glfw.src-173337b11eaac82d7b6e.json  index-2022-09-07T11-57-21-0750.json  target-Floof-f2f1d429ee88a72387d4.json  target-aob-a85940b8770c833fc906.json  target-glfw-898581636795d6867ea7.json  target-uninstall-bb4672278125fb8cd079.json  target-update_mappings-a4688f2a39da7a3a1c81.json
Assets/: Icon16x16.aseprite  SimTerrain.visim  SimTerrain.vsim.txt  france.las  france.lasbin  france.txt  france2.txt
CMakeScripts/: ReRunCMake.make
Libs/HeaderOnly/vma/: vk_mem_alloc.h
Libs/PhysX/physx/compiler/mac64/CMakeScripts/: ReRunCMake.make
Libs/PhysX/physx/compiler/mac64/PhysXSDK.xcodeproj/: project.pbxproj
Libs/PhysX/physx/compiler/mac64/sdk_snippets_bin/CMakeScripts/: ReRunCMake.make
Libs/PhysX/physx/compiler/mac64/sdk_snippets_bin/Snippets.xcodeproj/: project.pbxproj
Libs/PhysX/physx/compiler/mac64/sdk_source_bin/CMakeScripts/: ReRunCMake.make
Libs/PhysX/physx/compiler/mac64/sdk_source_bin/PhysX.xcodeproj/: project.pbxproj
Shaders/: Basic.frag  Basic.frag.spv  Basic.vert  Basic.vert.spv  Color.vert  Color.vert.spv  Line.vert  Line.vert.spv  LitColor.frag  LitColor.frag.spv  LitColor.vert  LitColor.vert.spv  Normal.frag  Normal.vert  Normal.vert.spv
Source/: Application.cpp  Application.h  Components.cpp  Components.h  Floof.cpp  Floof.h  Input.h  LasLoader.cpp  LasLoader.h  Logger.cpp  Logger.h  LoggerMacros.h  Math.h  ObjLoader.cpp  ObjLoader.h  Octree.cpp  Octree.h  Physics.cpp  Physics.h  Simulate.cpp  Simulate.h  Texture.cpp  Texture.h  Timer.h  Utils.cpp  Utils.h  Vertex.h  VulkanRenderer.cpp  VulkanRenderer.h  stb_image.h
Source/Physics/: Physics.cpp  Physics.h
Utils/: Utils.cpp  Utils.h
